[package]
name = "lockbox"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "2.0.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
